2002-01-08  Anders Carlsson  <andersca@gnu.org>

	* libnautilus-private/nautilus-icon-container.c:
	(nautilus_icon_container_update_icon):
	* libnautilus/nautilus-view-component.idl:
	* libnautilus/nautilus-view.c: (call_close_window),
	(nautilus_view_close_window):
	* libnautilus/nautilus-view.h:
	* src/nautilus-profiler.c:
	(nautilus_profiler_bonobo_ui_report_callback):
	* src/nautilus-view-frame-corba.c: (close_window),
	(impl_Nautilus_ViewFrame_close_window),
	(nautilus_view_frame_corba_part_class_init):
	* src/nautilus-view-frame-private.h:
	* src/nautilus-view-frame.c: (nautilus_view_frame_close_window),
	(nautilus_view_frame_class_init):
	* src/nautilus-view-frame.h:
	* src/nautilus-window-manage-views.c: (close_window_callback):
	Implement nautilus_view_close_window ().
	
2002-01-08  Anders Carlsson  <andersca@gnu.org>
 
	* src/nautilus-zoom-control.c (nautilus_zoom_control_finalize): Remove
	preferences calback in ::finalize.
	(nautilus_zoom_control_unload_images): Set image pointers to NULL after
	unloading images.

	* src/nautilus-window-menus.c: Remove some userlevel #defines.

	* src/nautilus-switchable-search-bar.c 
	(nautilus_switchable_search_bar_finalize): Remove the preferences callback
	in ::finalize instead of ::destroy.
 
	* src/nautilus-switchable-navigation-bar.c: Create the search bar lazily.
	Creating the search bar came up high on the profile when creating new windows,
	and doing it lazily helps, especially when we don't have medusa support yet.
	(nautilus_switchable_navigation_bar_finalize): Free details in ::finalize.

	* src/nautilus-simple-search-bar.c (nautilus_simple_search_bar_finalize):
	Free details in ::finalize.
	(nautilus_simple_search_bar_destroy): Disable the undo stuff. Perhaps we could
	call connect to "destroy" in nautilus_undo_set_up_nautilus_entry_for_undo
	and call nautilus_undo_tear_down_nautilus_entry_for_undo there instead.

	* src/nautilus-sidebar.c (nautilus_sidebar_init): Ref and sink the title tab.