@@ -1,5 +1,9 @@
 2002-01-08  Anders Carlsson  <andersca@gnu.org>
 
+	* libnautilus-private/nautilus-bonobo-extensions.c (activation_handle_free): 
+	New function to free a handle and it's associated object.
+	(activation_idle_callback): Call activation_handle_free.
+
 	* libnautilus-private/nautilus-icon-container.c:
 	(nautilus_icon_container_update_icon):
 	* libnautilus/nautilus-view-component.idl:
